<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/main_menu_settings"
        android:icon="@drawable/main_setting"
        android:showAsAction="ifRoom|withText"
        android:title="Setting">
        <menu>
            <item
                android:id="@+id/activity_menu_about"
                android:layout_width="wrap_content"
                android:background="#33b5e5"
                android:title="@string/main_settings"/>
            <item
                android:id="@+id/activity__menu_shareApp"
                android:layout_width="wrap_content"
                android:title="@string/main_settings_shareapp"/>
            <item
                android:id="@+id/activity__menu_contactMe"
                android:layout_width="wrap_content"
                android:title="@string/main_settings_contactme"/>
        </menu>
    </item>

</menu>