<?xml version="1.0"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_call_addContact"
        android:icon="@drawable/add"
        android:showAsAction="always"
        android:title="Add a new contact"/>
    <item
        android:id="@+id/menu_call_deleteContact"
        android:icon="@drawable/delete"
        android:showAsAction="always"
        android:title="Delete a contact"/>
    <item
        android:id="@+id/main_menu_settings"
        android:icon="@drawable/main_setting"
        android:showAsAction="ifRoom|withText"
        android:title="Setting">
        <menu>
            <item
                android:id="@+id/main_menu_about"
                android:layout_width="wrap_content"
                android:background="#33b5e5"
                android:title="@string/main_settings"/>
            <item
                android:id="@+id/main_menu_shareApp"
                android:layout_width="wrap_content"
                android:title="@string/main_settings_shareapp"/>
            <item
                android:id="@+id/main_menu_contactMe"
                android:layout_width="wrap_content"
                android:title="@string/main_settings_contactme"/>
        </menu>
    </item>

</menu>