<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootview_page3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity$DummySectionFragment" >

    <LinearLayout
        android:id="@+id/linearlayout_note"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:paddingLeft="5dp" >

        <LinearLayout
            android:id="@+id/linearlayout_buttons"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/note_title"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:layout_marginBottom="5dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:clickable="false"
                android:background="@drawable/note"
                android:text="@string/page3_note" />

            <Button
                android:id="@+id/note_save"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.3"
                android:layout_marginBottom="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/edittext_clickable_border"
                android:text="@string/page3_save" />

            <Button
                android:id="@+id/note_clear"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.3"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/edittext_clickable_border"
                android:text="@string/page3_clear" />
        </LinearLayout>

        <EditText
            android:id="@+id/fragment_edittext_note"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/edittext_clickable_border"
            android:gravity="left|top"
            android:inputType="textMultiLine"
            android:lines="10"
            android:maxLines="20"
            android:scrollHorizontally="false"
            android:scrollbars="vertical"
            android:singleLine="false" >

            <requestFocus />
        </EditText>
    </LinearLayout>

</RelativeLayout>