<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity$DummySectionFragment" >

    <TableLayout
        android:id="@+id/tableLayout1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginBottom="30dp" 
        android:layout_marginTop="30dp">

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="60" >

            <Button
                android:id="@+id/bt_call"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_call_pattern"
                android:scaleType="centerCrop" />

            <Button
                android:id="@+id/bt_hyperlink"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_hyperlink_pattern"
                android:scaleType="fitCenter" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="0.2"
            android:layout_marginBottom="25dp"  >

            <TextView
                android:id="@+id/txt_call"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/page2_call"
                android:textColor="#509EBB"
                android:textSize="25dp" />

            <TextView
                android:id="@+id/txt_hyperlink"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/page2_hyperlink"
                android:textColor="#509EBB"
                android:textSize="25dp" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="60" >

            <Button
                android:id="@+id/bt_market"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_flyer_pattern" />

            <Button
                android:id="@+id/bt_gallery"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_gallery_pattern" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="0.01" >

            <TextView
                android:id="@+id/txt_3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/page2_flyer"
                android:textColor="#509EBB"
                android:textSize="25dp" />

            <TextView
                android:id="@+id/txt_4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/page2_gallery"
                android:textColor="#509EBB"
                android:textSize="25dp" />
        </TableRow>
    </TableLayout>

</RelativeLayout>